--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/react-dom": "^17.0.9",
     "@types/uuid": "^8.3.4",
     "antd": "^4.18.6",
+    "axios": "^0.26.1",
     "mobx": "^6.3.13",
     "mobx-react": "^7.2.1",
     "mobx-react-lite": "^3.2.3",
